# wasmer-go

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WORKSPACE  bors.toml  go.mod  go.sum  justfile  staticcheck.conf
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: code-qa.yml  greetings.yml  nightly.yml  test.yml  validate.yml
benchmarks/life/: benchmarks_test.go  go.mod  go.sum
benchmarks/wagon/: benchmarks_test.go  go.mod  go.sum  testdata
benchmarks/wasmer/: benchmarks_test.go  go.mod  go.sum  testdata
e2e/: .gitignore  go.mod  main.go  test.sh
examples/: example_early_exit_test.go  example_errors_test.go  example_exports_function_test.go  example_exports_global_test.go  example_imports_exports_test.go  example_imports_function_test.go  example_instance_test.go  example_memory_test.go  greet.go  greet.wasm  memory.go  memory.rs  simple.go
examples/appendices/: Cargo.toml  simple  simple.go  simple.rs  start.sh
examples/appendices/src/: lib.rs
examples/utils/: helpers.go
examples/wasi/: go.mod  go.sum  main.go  module.wasm
examples/wasi/wasm/: go.mod  wasm.go
extension/: wasm.go
extension/src/wasmer/: error.go  example_greet_test.go  example_memory_test.go  example_simple_test.go  instance.go  instance_test.go  memory.go  memory_test.go  module.go  module_test.go  value.go  value_test.go  wasmer.go  wasmer_test.go
extension/tests/: invalid.wasm
go-wasmer/: BUILD.bazel  main.go
spacemesh/: node_data.go
src/: lib.rs
wasmer/: BUILD.bazel  _example_import_test.go  benchmarks_test.go  bridge.go  cgo.go  cgo_customlib.go  cgo_with_custom_wasmer_runtime.go  config.go  config_darwin.go  config_linux.go  config_opcodes.go  config_test.go  config_test_helper.go  cptr.go  cptr_check.go  cptr_nocheck.go  engine.go  engine_test.go  error.go  example_greet_test.go  example_memory_test.go  example_simple_test.go  example_test.go  export.go  exports.go  exporttype.go  exporttype_test.go  extern.go  externtype.go  externtype_test.go  function.go  function_test.go  functiontype.go  functiontype_test.go  global.go  global_test.go  globaltype.go  globaltype_test.go  go.mod  go.sum  (+47 more)
wasmer/packaged/include/: dummy.go  wasmer.h
wasmer/packaged/lib/: dummy.go
wasmer/packaged/lib/darwin-aarch64/: dummy.go
wasmer/packaged/lib/darwin-amd64/: dummy.go
wasmer/packaged/lib/linux-aarch64/: dummy.go
wasmer/packaged/lib/linux-amd64/: dummy.go
wasmer/packaged/lib/windows-amd64/: dummy.go
wasmer/src/wasmer/: error.go  example_simple_test.go  example_test.go  memory_test.go  module_test.go  wasmer.go
wasmer/test/: context.go  context_test.go  example_greet_test.go  example_import_test.go  example_memory_test.go  example_simple_test.go  example_test.go  import_test.go  imports.go  instance_test.go  memory_test.go  module_test.go  svm_instance.go  svm_instance_test.go  value_test.go
wasmer/test/testdata/: import_memory.wasm  import_memory.wat  imported_function.rs  imported_function.wasm  log.rs  log.wasm  no_memory.wasm  no_memory.wat  tests.rs  wasi_hello_world.wasm  wasi_hello_world.wat
wasmer/testdata/: sum.wasm  tests.wasm  wasi.rs  wasi.wasm
wasmexec/: wasmexec.go
wasmexec/test/: wasmexec_test.go
wasmexec/test/testdata/: tinygo.go  tinygo.wasm
(+12 files in other folders)
