[package]
publish = false
name = "wasmer-go"
version = "1.0.1"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
description = "Go library to run WebAssembly binaries"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-go"
keywords = ["golang", "extension", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer-c-api = "1.0"

[features]
default = [
    "wat",
    "cranelift",
    "jit",
    "wasi",
]
wat = ["wasmer-c-api/wat"]
wasi = ["wasmer-c-api/wasi"]
engine = ["wasmer-c-api/engine"]
jit = ["wasmer-c-api/jit"]
native = ["wasmer-c-api/native"]
object-file = ["wasmer-c-api/object-file"]
compiler = ["wasmer-c-api/compiler"]
singlepass = ["wasmer-c-api/singlepass"]
cranelift = ["wasmer-c-api/cranelift"]
llvm = ["wasmer-c-api/llvm"]
system-libffi = ["wasmer-c-api/system-libffi"]