[package]
publish = false
name = "wasmer-go"
version = "1.0.3"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
description = "Go library to run WebAssembly binaries"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-go"
keywords = ["golang", "extension", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer-c-api = "2.0"

[features]
default = [
    "wat",
    "cranelift",
    "universal",
    "wasi",
]
wat = ["wasmer-c-api/wat"]
wasi = ["wasmer-c-api/wasi"]
engine = ["wasmer-c-api/engine"]
universal = ["wasmer-c-api/universal"]
dylib = ["wasmer-c-api/dylib"]
staticlib = ["wasmer-c-api/staticlib"]
compiler = ["wasmer-c-api/compiler"]
singlepass = ["wasmer-c-api/singlepass"]
cranelift = ["wasmer-c-api/cranelift"]
llvm = ["wasmer-c-api/llvm"]